<resources>
    <string name="app_name">MISDesign</string>
    <string name="main_heading_login">Log into Your Account</string>
    <string name="main_heading_register">Register</string>
    <string name="student_email_address_heading">Student Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password_heading">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_button">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="registerhere"> Register here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loginhere"> Login here</string>
    <string name="registerbtn"> Register</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="OR">OR</string>
    <string name="enter_student_name">Enter student name</string>
    <string name="enter_student_email">Enter student email</string>
    <string name="enter_phone">Enter phone no.</string>
    <string name="Branch">Branch</string>
    <string name="select_current_year">Select current year</string>
    <string name="select_graduation_year">Select graduation year</string>
    <string name="welcome">Welcome</string>
    <string name="nameofstudent">Name of student</string>
    <string name="studentid">Student ID</string>
    <string name="typeofproject">Type of project</string>
    <string name="addteam">Add teammates</string>
    <string name="addlink">Add links/documents</string>
    <string name="addprojtit">Add project title</string>
    <string name="addprojddesc">Add project description</string>
    <string name="prjctstat">Project process status</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="NewProject">New Project\n</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="main_heading_addproject">Add Project</string>
    <string name="enter_student_name1">Name of student\n</string>
    <string name="student_id">Student ID</string>
    <string name="projectprogress_status">Project progress status</string>
    <string name="Addteammates">Add teammates</string>
    <string name="addlinks">Add links/documents\n</string>
    <string name="addprojecttitle">Add project title</string>
    <string name="addprojectdescription">Add project description</string>
    <string name="add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="main_heading_bookmachine">Book Machine</string>
    <string name="enter_student_name_anjali">Anjali Jain</string>
    <string name="book">book\n</string>
    <string name="addpurpose">Add purpose</string>
    <string name="selectthemachine">Select the machine</string>
    <string name="Book">Book\n</string>
    <string name="select_month">mm\n</string>
    <string name="select_day">dd</string>
    <string name="select_year">yy</string>
    <string name="select_machine">Select the machine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>