<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".BookFragment">

    <TextView
        android:id="@+id/mainHeadingbookmachine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/main_heading_bookmachine"
        android:textColor="@color/black"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/nametit"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:hint="@string/enter_student_name_anjali"
        android:drawableLeft="@drawable/baseline_group_add_24"
        android:inputType="text"
        android:textSize="20dp"
        android:drawablePadding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainHeadingbookmachine" />


    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/mm"
        android:prompt="@string/select_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nametit" />

    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/dd"
        android:prompt="@string/select_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nametit" />

    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:prompt="@string/select_year"
        android:entries="@array/yy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nametit" />

    <Spinner
        android:id="@+id/machineSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/Selectthemachine"
        android:prompt="@string/select_machine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daySpinner" />



    <EditText
        android:id="@+id/typeofproject"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/typeofproject"
        android:drawableLeft="@drawable/statusproj24"
        android:inputType="text"
        android:textSize="24dp"
        android:drawablePadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineSpinner" />


    <EditText
        android:id="@+id/addprojecttitle"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:hint="@string/addprojecttitle"
        android:inputType="text"
        android:drawableLeft="@drawable/baseline_title_24"
        android:textSize="24dp"
        android:drawablePadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeofproject" />
    <EditText
        android:id="@+id/addpurpose"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:hint="@string/addpurpose"
        android:inputType="text"
        android:drawableLeft="@drawable/baseline_description_24"
        android:textSize="24dp"
        android:drawablePadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addprojecttitle" />

    <Button
        android:id="@+id/bookBtn"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/green1"
        android:text="@string/Book"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addpurpose" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/Cancel"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addpurpose" />
</androidx.constraintlayout.widget.ConstraintLayout>